syntax = "proto3";

package org.federation;

import "google/protobuf/any.proto";
import "grpc/federation/federation.proto";

option go_package = "example/federation;federation";

option (grpc.federation.file)= {
  import: ["post/post.proto", "user/user.proto"]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {};
}

message GetPostsRequest {
  repeated string ids = 1;
}
    
message GetPostsResponse {
  option (grpc.federation.message) = {
    def {
      name: "posts"
      message {
        name: "Posts"
        args { name: "post_ids", by: "$.ids" }
      }
    }
  };
  Posts posts = 1 [(grpc.federation.field).by = "posts"];
}

message Posts {
  option (grpc.federation.message) = {
    def [
      {
         name: "res"
         call {
          method: "post.PostService/GetPosts"
          request { field: "ids" by: "$.post_ids" }
         }
      },
      { name: "posts", by: "res.posts" },
      {
        name: "ids"
        map {
          iterator {
            name: "post"
            src: "posts"
          }
          by: "post.id"
        }
      },
      {
        name: "users"
        map {
          iterator {
            name: "iter"
            src: "posts"
          }
          message {
            name: "User"
            args { name: "user_id", by: "iter.user_id" }
          }
        }
      },
      {
        name: "items"
        map {
          iterator {
            name: "iter"
            src: "posts"
          }
          message {
            name: "Posts.PostItem"
            args { name: "id" by: "iter.id" }
          }
        }
      },
      {
        name: "source_item_types"
        by: "[user.Item.ItemType.value('ITEM_TYPE_1'), user.Item.ItemType.value('ITEM_TYPE_2')]"
      },
      {
        name: "item_types"
        map {
          iterator {
            name: "typ"
            src: "source_item_types"
          }
          enum {
            name: "Item.ItemType"
            by: "typ"
          }
        }
      }
    ]
  };

  message PostItem {
    string name = 1 [(grpc.federation.field).by = "'item_' + $.id"];
  };

  repeated string ids = 1 [(grpc.federation.field).by = "ids"];
  repeated string titles = 2 [(grpc.federation.field).by = "posts.map(post, post.title)"];
  repeated string contents = 3 [(grpc.federation.field).by = "posts.map(post, post.content)"];
  repeated User users = 4 [(grpc.federation.field).by = "users"];
  repeated PostItem items = 5 [(grpc.federation.field).by = "items"];
  repeated Item.ItemType item_types = 6 [(grpc.federation.field).by = "item_types"];
}

message User {
  option (grpc.federation.message) = {
    def {
      name: "res"
      call {
        method: "user.UserService/GetUser"
        request { field: "id" by: "$.user_id" }
      }
    }
    def { name: "user" by: "res.user" autobind: true }
  };
  string id = 1;
  string name = 2;
}

message Item {
  option (grpc.federation.message).alias = "user.Item";

  enum ItemType {
    option (grpc.federation.enum).alias = "user.Item.ItemType";

    ITEM_TYPE_UNSPECIFIED = 0;
    ITEM_TYPE_1 = 1;
    ITEM_TYPE_2 = 2;
    ITEM_TYPE_3 = 3;
  }
}